[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Gun.gd" type="Script" id=1]

[node name="Gun" type="AnimatedSprite"]
script = ExtResource( 1 )

[node name="BarrelPoint" type="Position2D" parent="."]

[node name="ShotAudio" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.221

[node name="BulletSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadAudio" type="AudioStreamPlayer2D" parent="."]
[connection signal="timeout" from="BulletSpawnTimer" to="." method="_on_BulletSpawnTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
